# CodeLens-Agent

./: .gitignore  README.md  install.sh  package-lock.json  package.json  pyproject.toml
deep_ai_analysis/: cli.py  config.py  exporter.py
deep_ai_analysis/addons/: recorder.py
deep_ai_analysis/commands/: export.py  import_.py  proxy.py  start_mc.py  web_server.py
deep_ai_analysis/parsers/: sse_parser.py
docs/: AI Coding诊断.md  Claude日志清洗.md  data-detect.ipynb  原始请求响应处理注意.md  打包whl.md  打包发布.md
openspec/changes/archive/2026-05-07-intercept-claude-code-requests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-intercept-claude-code-requests/specs/request-interceptor/: spec.md
openspec/changes/archive/2026-05-07-intercept-claude-code-requests/specs/request-logger/: spec.md
openspec/changes/archive/2026-05-07-intercept-claude-code-requests/specs/request-viewer/: spec.md
openspec/changes/archive/2026-05-07-web-request-viewer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-web-request-viewer/specs/request-detail-ui/: spec.md
openspec/changes/current-session-analysis-report/: tasks.md
openspec/changes/current-session-analysis-report/specs/current-session-analysis-report/: spec.md
openspec/specs/cli-framework/: spec.md
openspec/specs/proxy-interceptor/: spec.md
openspec/specs/session-viewer/: spec.md
public/: app.js  index.html  style.css
src/: logger.js  proxy.js  viewer.js  web-server.js
tests/: test_current_session_analysis.py
viewer/: claude-log.html  index.html  req-resp.html  server.py
(+2 files in other folders)
